# coki-jit

./: .gitignore  Cargo.toml  PROC64.INC  README.md
examples/: fibs.coki  oka.coki  oka2.coki  simple_if.coki  simple_while.coki
grammar/: Cargo.toml
grammar/src/: grammar.rs  grammar_lexer.rs  lib.rs
jitter/: Cargo.toml
jitter/src/: jit.rs  lib.rs
parser/: Cargo.toml
parser/src/: grammar.rs  grammar_lexer.rs  lexer.rs  lib.rs  parser.rs
src/: asm_ops.rs  ast_optimizer.rs  cli.yml  compiler.rs  grammar.rs  grammar_lexer.rs  ir.rs  jit.rs  lexer.rs  main.rs  optimizer.rs  parser.rs
wrapper/: Cargo.toml
wrapper/src/: main.rs
