[package]

name = "coki"
version = "0.1.0"
authors = [ "Dan Simon <dan@dansimon.info>", "White Oak <lpzhelud@gmail.com>" ]

[dependencies]
coki_jitter = { path = "jitter" }
coki_parser = { path = "parser" }
clap = {version = "2", features = ["yaml"]}
libc = "0.2.2"

[target.x86_64-pc-windows-gnu.dependencies]
winapi = "0.2"
kernel32-sys = "0.2"

[target.i686-pc-windows-gnu.dependencies]
winapi = "0.2"
kernel32-sys = "0.2"
